# ledit

./: .env-example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  rustfmt.toml  sqlx-data.json  sqlx-prepare.sh
.github/workflows/: ci.yml
migrations/: 20211227115922_init.down.sql  20211227115922_init.up.sql  20220208113835_rename_task_to_todos.down.sql  20220208113835_rename_task_to_todos.up.sql
src/: action.rs  error.rs  interval.rs  main.rs  util.rs
src/handler/: chat_member.rs  info.rs  mod.rs  task.rs  todo.rs  todo_list.rs  todos.rs
txt/: help.txt  start.txt
