[package]
name = "ledit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.9.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
regex = "1.3.9"
thiserror = "1.0.26"
tokio = { version = "1.13", features = ["full"] }
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "offline",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.9", features = ["serde"] }
itertools = "0.10.3"
rand = "0.8.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
